            - New routine to support compile-time for loops.
    PYTHON:
        - For classes that have a bool() cast operator, this is now wrapped in
          Python using the special __bool__() function (i.e., Python will now
          cast such objects to bool in the same way).
    UTILITIES:
        tricensus:
            - Now supports multithreading via the new --threads option.

Version 7.0  [ 19 December, 2021 ]

    GENERAL:
        - The file format has changed.  It is still XML-based, but older
          versions of Regina will not be able to read files created by
          Regina 7.0 or later.  Regina can of course still both read
          the old format (transparently) and write it (if asked).
        - The packet tree is now used purely for the GUI and for file I/O.
          Mathematical objects such as triangulations, links, surface lists,
          etc. are standalone, without the overhead of the full packet tree
          infrastructure (so no labels, tags, listeners, or parent/child
          relationships).  To use them with the full packet tree
          infrastructure, use a PacketOf<...> wrapper.
        - Normal surface/hypersurface lists and angle structure lists no
          longer need their triangulations to sit above them in the
          packet tree, and indeed their triangulations may change or
          even be deleted.  Lists will maintain a "snapshot" of the original
          triangulation if necessary.
        - All packet types are now managed exclusively by std::shared_ptr
          (a promise from the engine, but also a new requirement for the user).
          All non-packet types (including all mathematical objects, which are
          now standalone types) have full value semantics, supporting copy,
          move, swap and assignment operations wherever this makes sense.
        - Now requires C++17 (not C++14).
        - Updated the bundled copy of Normaliz to version 3.8.9 (26 Sep 2020).